# Kalman-SINDy-PDE

./: .gitignore  LICENSE  nohup.out  pyproject.toml  run_pde_exps.sh
kalman_sindy_pde.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ksindy_pde_figs/: config.py  data_config.py  debug.py  debug2.py
