[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "kalman-sindy-pde"
authors = [
    {name="Yash Bhangale", email="bhangaleys@gmail.com"},
]
license = {text = "MIT"}
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "matplotlib",
    "mitosis>=0.5.2",
    "pysindy-experiments @ git+https://github.com/Jacob-Stevens-Haas/gen-experiments.git"
]

[tool.setuptools]
[tool.setuptools.packages.find]
where = ["."]
include = ["trials*", "ksindy_pde_figs*"]

[tool.isort]
profile = "black"

[tool.mitosis.steps]
data_gen = ["gen_experiments.data:gen_pde_data", "ksindy_pde_figs.config:lookup_dict"]
pde_grid = ["gen_experiments.gridsearch:run", "ksindy_pde_figs.config:lookup_dict"]